compiler/tests/success/common/test_type_eq.jazz
param int n = 1;

inline
fn f(reg u32[n] x) -> reg u32[n] { return x; }
export
fn g() -> reg u32 {
reg u32[n] a;
reg u32[n] b;
b[0] = 0;
a = #copy_32(b);
b = f(a);
reg u32 r = b[0];
return r;
}
